# CRRLCalibBank

./: LICENSE  MANIFEST.in  README.md  setup.cfg
CRRLCalibBank/parameters/cameras/: rs430i_unitree-b1-back-cam_kalibr-camchain.yaml  rs430i_unitree-b1-front-cam_kalibr-camchain.yaml  rs430i_unitree-b1-side-left-cam_kalibr-camchain.yaml  rs430i_unitree-b1-side-right-cam_kalibr-camchain.yaml  rs455i_141322250720_kalibr-camchain.yaml  zedm_unitree_kalibr-camchain.yaml
CRRLCalibBank/parameters/imus/: bmi088-imu_unitree-b1_allan.yaml
CRRLCalibBank/parameters/robots/b1/extrinsics/cameras-imu/front-d455/ext-bmi088-imu/: rs455i_142422250881_dataset-camchain-imucam.yaml  rs455i_142422250881_dataset-results-imucam.txt
CRRLCalibBank/parameters/robots/b1/extrinsics/cameras-imu/front-d455/ext-unitree-imu/: rs455i_142422250881_dataset-camchain-imucam.yaml  rs455i_142422250881_dataset-camchain.yaml  rs455i_142422250881_dataset-imu.yaml  rs455i_142422250881_dataset-results-imucam.txt
CRRLCalibBank/parameters/robots/b1/intrinsics/cameras/back/: back-results-cam.txt
CRRLCalibBank/parameters/robots/b1/intrinsics/cameras/front/: front-results-cam.txt
CRRLCalibBank/parameters/robots/b1/intrinsics/cameras/front_down/: front_down-results-cam.txt
CRRLCalibBank/parameters/robots/b1/intrinsics/cameras/side_left/: side_left-results-cam.txt
CRRLCalibBank/parameters/robots/b1/intrinsics/cameras/side_right/: side_right-results-cam.txt
