[metadata]
name = RoboCastingTools
version = 1.0.0
description = Frequently used tools for robotic reserach and data manipulation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RobotCasters/CRRLCalibBank
author = Rooholla Khorrambakht, Bolun Dai
author_email = rk4342@nyu.edu, bd1555@nyu.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True
install_requires =
    numpy>=1.22.3
    pandas
    pyquaternion

# [options.entry_points]
# console_scripts =
#     bag_to_images = RoboCastingTools.scripts.bag_to_images:main
#     bag_to_tfs = RoboCastingTools.scripts.bag_to_tfs:main